Use simple variables

--- a/usr/asubst/makefile
+++ b/usr/asubst/makefile
@@ -6,7 +6,7 @@ SUBUNITS := replace_pattern-file_content replace_pattern-shell_command
 EXES := asubst asubst.stat
 
 CLIBS := $(UTILS_SLIBS)
-CLIBS_asubst = $(PCRE_SLIBS)
+CLIBS_asubst := $(PCRE_SLIBS)
 
 LARGS_asubst.stat := $(PCRE_ALIBS) $(UTILS_ALIBS)
 
