--- a/cots/makefile
+++ b/cots/makefile
@@ -1,6 +1,6 @@
 include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
 
-SUBDIRS := pragmarc mine linxtris-0.1a2
+SUBDIRS := pragmarc mine
 
 include $(TEMPLATES)/dir.mk
 
