--- a/cots/pragmarc/makefile
+++ b/cots/pragmarc/makefile
@@ -1,6 +1,7 @@
 include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
 
 ADAWARN := false
+NO_ADACTL = true
 
 include $(TEMPLATES)/ada.mk
 
