--- a/usr/misc/makefile
+++ b/usr/misc/makefile
@@ -8,7 +8,7 @@ AFPX_XREF := afpx_xref
 SUBUNITS :=
 EXES := adand add_nums alook arbipas astat azf beep comp_vars \
  day_of_week ddir e2f fact full_path g hanoi \
- impot_04 mlbx_overflow one_of_arg pascal pingpong prime \
+ impot_04 lenv mlbx_overflow one_of_arg pascal pingpong prime \
  random relay renamer \
  second statfile status strcase tcping trail_spaces udp_spy \
  wait wake \
@@ -17,6 +17,7 @@ EXES := adand add_nums alook arbipas astat azf beep comp_vars \
 
 CLIBS := $(UTILS_SLIBS)
 CLIBS_comp_vars := $(PCRE_SLIBS)
+CLIBS_lenv := $(PCRE_SLIBS)
 CLIBS_relay := $(PCRE_SLIBS)
 CLIBS_renamer := $(X11_SLIBS)
 CLIBS_wake := $(PCRE_SLIBS)
