--- a/usr/xml/makefile
+++ b/usr/xml/makefile
@@ -1,6 +1,7 @@
 include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
 
 ADAVIEW := $(REPOSIT)
+ADACTL := true
 
 
 SUBUNITS := dtd_generator-merge dtd_generator-merge-sequences \
