--- a/usr/als/makefile
+++ b/usr/als/makefile
@@ -1,6 +1,7 @@
 include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
 
 ADAVIEW := $(REPOSIT)
+ADACTL := true
 
 SUBUNITS := als-parse_date als-set_criteria
 EXES := als als.stat
