--- a/usr/fifos/makefile
+++ b/usr/fifos/makefile
@@ -1,6 +1,7 @@
 include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
 
 ADAVIEW := $(USR)/dictio $(REPOSIT)
+ADACTL := true
 
 EXES := t_fifos
 
