--- a/usr/pipe/makefile
+++ b/usr/pipe/makefile
@@ -1,6 +1,7 @@
 include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
 
 ADAVIEW := $(USR)/fifos $(USR)/dictio $(REPOSIT)
+ADACTL := true
 
 EXES := pipe
 
