--- a/usr/tasks/makefile
+++ b/usr/tasks/makefile
@@ -2,6 +2,7 @@ include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
 include $(HOME)/Makefiles/units.mk
 
 ADAVIEW := $(REPOSIT)
+ADACTL := true
 
 EXES := $(UNITS)
 
