--- a/usr/xwords/makefile
+++ b/usr/xwords/makefile
@@ -1,6 +1,7 @@
 include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
 
 ADAVIEW := $(REPOSIT)
+ADACTL := true
 
 AFPX := true
 AFPX_XREF := afpx_xref
