--- a/usr/misc/makefile
+++ b/usr/misc/makefile
@@ -7,8 +7,8 @@ AFPX := true
 AFPX_XREF := afpx_xref
 
 SUBUNITS :=
-EXES := adand add_nums alook arbipas astat azf beep comp_vars \
- day_of_week ddir e2f fact full_path g hanoi \
+EXES := adand add_nums alook arbipas astat azf beep bernouilli \
+ comp_vars day_of_week ddir e2f fact full_path g hanoi \
  impot_04 lenv mlbx_overflow one_of_arg pascal pingpong prime \
  random relay renamer \
  second statfile status strcase tcping trail_spaces udp_spy \
