Use '.' in subunit names

--- a/usr/als/makefile
+++ b/usr/als/makefile
@@ -3,7 +3,7 @@ include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
 ADAVIEW := $(REPOSIT)
 ADACTL := true
 
-SUBUNITS := als-parse_date als-set_criteria
+SUBUNITS := als.parse_date als.set_criteria
 EXES := als als.stat
 
 CLIBS := $(UTILS_SLIBS)
