--- a/usr/chess/makefile
+++ b/usr/chess/makefile
@@ -3,10 +3,10 @@ include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
 ADAVIEW := $(REPOSIT)
 ADACTL := true
 
-SUBUNITS := pieces-actions_of_bishop pieces-actions_of_king \
-pieces-actions_of_knight pieces-actions_of_pawn pieces-actions_of_queen \
-pieces-actions_of_rook screen-text screen-moves screen-graphic-bitmaps \
-screen-graphic
+SUBUNITS := pieces.actions_of_bishop pieces.actions_of_king \
+pieces.actions_of_knight pieces.actions_of_pawn pieces.actions_of_queen \
+pieces.actions_of_rook screen.text screen.moves \
+screen.graphic screen.graphic.bitmaps 
 EXES := chess chess.stat
 
 CLIBS := $(X11_SLIBS)
