--- a/usr/mmind/makefile
+++ b/usr/mmind/makefile
@@ -3,7 +3,7 @@ include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
 ADAVIEW := $(REPOSIT)
 ADACTL := true
 
-SUBUNITS := action-treat_click action-treat_release
+SUBUNITS := action.treat_click action.treat_release
 EXES := mmind
 
 CLIBS_mmind := $(X11_SLIBS)
