--- a/usr/c_magic/makefile
+++ b/usr/c_magic/makefile
@@ -3,7 +3,7 @@ include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
 ADAVIEW := $(REPOSIT)
 ADACTL := true
 
-SUBUNITS := common-check
+SUBUNITS := common.check
 EXES := c_magic
 
 include $(TEMPLATES)/ada.mk
