--- a/usr/enigma/makefile
+++ b/usr/enigma/makefile
@@ -3,7 +3,7 @@ include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
 ADAVIEW := $(REPOSIT)
 ADACTL := true
 
-SUBUNITS := def_enigma-xml
+SUBUNITS := def_enigma.xml
 EXES := anal_freq enigma scrambler_generator def_enigma letterator
 
 CLIBS := $(UTILS_SLIBS)
