--- a/usr/lem/makefile
+++ b/usr/lem/makefile
@@ -3,7 +3,7 @@ include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
 ADAVIEW := $(REPOSIT)
 ADACTL := true
 
-SUBUNITS := screen-get_event
+SUBUNITS := screen.get_event
 EXES := land_lem
 
 CLIBS := $(X11_SLIBS)
