--- a/usr/sokoban/makefile
+++ b/usr/sokoban/makefile
@@ -3,7 +3,7 @@ include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
 ADAVIEW := $(REPOSIT)
 ADACTL := true
 
-SUBUNITS := sok_manager-sok_file sok_manager-sok_menu
+SUBUNITS := sok_manager.sok_file sok_manager.sok_menu
 EXES := sokoban scores
 
 CLIBS := $(X11_SLIBS)
