Remove dependancy to reposit

--- a/usr/mapcode/makefile
+++ b/usr/mapcode/makefile
@@ -5,6 +5,11 @@ ADACTL := true
 
 ADAOPT = -g
 EXES := mapcode
+PARGS_mapcode.apb =
 
 include $(TEMPLATES)/ada.mk
+
+export :
+	-rm mapcode.adb
+	$(MAKE) 'PARGS_mapcode.apb=Export'
 
