--- a/usr/makefile
+++ b/usr/makefile
@@ -1,7 +1,7 @@
 include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
-SUBDIRS := dictio fifos pipe \
+SUBDIRS := dictio fifos pipe mapcode \
  account agite als approx astub asubst battleship c_magic chess code enigma fl \
- great_circle heart hungar lsadeps lem logrotator mapcode mcd misc mmind navig \
+ great_circle heart hungar lsadeps lem logrotator mcd misc mmind navig \
  nimmari pexec renardeau sensor simusi sokoban tasks tcpchat tcpipe tests xml \
  xwords
 
