--- a/usr/mapcode/makefile
+++ b/usr/mapcode/makefile
@@ -3,8 +3,9 @@ include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
 ADAVIEW := $(REPOSIT)
 ADACTL := true
 
-EXES := t_mapcode
+EXES := t_mapcode t_accuracy
 PARGS_t_mapcode.apb =
+CLIBS_t_accuracy := $(UTILS_SLIBS)
 
 include $(TEMPLATES)/ada.mk
 
