--- a/usr/mapcode/makefile
+++ b/usr/mapcode/makefile
@@ -1,7 +1,7 @@
 include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
 
 ADAVIEW := $(REPOSIT)
-ADACTL := true
+ADACTL := false
 
 EXES := t_mapcode t_accuracy
 PARGS_t_mapcode.apb =
