Add a specific screen for the patch command

--- a/usr/agite/makefile
+++ b/usr/agite/makefile
@@ -6,7 +6,7 @@ ADACTL := true
 AFPX := true
 AFPX_XREF := afpx_xref
 
-SUBUNITS := agite.timer branch.rebase_mng tags.list tags.add
+SUBUNITS := agite.timer branch.rebase_mng tags.list tags.add history.patch
 EXES := agite agite.stat t_git
 
 CLIBS := $(X11_SLIBS)
