--- a/usr/tests/makefile
+++ b/usr/tests/makefile
@@ -9,8 +9,6 @@ AFPX := true
 EXES := $(filter-out t_smart_int, $(ALLUNITS))
 
 CLIBS := $(X11_SLIBS)
-CLIBS_t_ndbm := cndbm gdbm \
- $(patsubst /usr/lib/$(ARCH)/lib%.so, %, $(wildcard /usr/lib/$(ARCH)/libgdbm_compat.so))
 CLIBS_t_async := $(PCRE_SLIBS)
 CLIBS_t_autobus := $(PCRE_SLIBS)
 CLIBS_t_bencode := $(PCRE_SLIBS)
@@ -18,7 +16,7 @@ CLIBS_t_byte_to_unicode := $(PCRE_SLIBS)
 CLIBS_t_channels := $(PCRE_SLIBS)
 CLIBS_t_date_text := $(PCRE_SLIBS)
 CLIBS_t_delta_date := $(PCRE_SLIBS)
-CLIBS_t_evp_digest := ssl crypto
+CLIBS_t_evp_digest := evp ssl crypto
 CLIBS_t_regex_filters := $(PCRE_SLIBS)
 CLIBS_t_regexp := $(PCRE_SLIBS)
 CLIBS_t_scanner := $(PCRE_SLIBS)
