Add lz4l, with large buffers

--- a/reposit/makefile
+++ b/reposit/makefile
@@ -10,14 +10,15 @@ SUBUNITS := afpx.af_dscr afpx.af_list afpx.af_ptg afpx_bld.xref \
   x_mng.dispatch 
 EXES := afpx_bld afpx_rnb clear_screen
 
-OPTIMIZED := snappy lzf lz4
+OPTIMIZED := lz4 lz4l lzf snappy
 PARGS_assertion.apb := # NoAssert
 PARGS_lz4.apb :=  # Debug
+PARGS_lz4l.apb :=  # Debug
 PARGS_lzf.apb :=  # Debug # Fast | Slow # LocalTrace
 PARGS_mutexes.apb := # Debug
-PARGS_snappy.apb := # Debug
 PARGS_rnd.aps := Urand
 PARGS_rnd.apb := Urand
+PARGS_snappy.apb := # Debug
 CLIBS_app := $(UTILS_SLIBS) $(PCRE_SLIBS)
 CLIBS_afpx_bld := $(PCRE_SLIBS) $(X11_SLIBS)
 CLIBS_afpx_rnb := $(PCRE_SLIBS) $(X11_SLIBS)
