--- a/reposit/makefile
+++ b/reposit/makefile
@@ -16,8 +16,8 @@ PARGS_lz4.apb :=  # Debug
 PARGS_lz4l.apb := # Debug
 PARGS_lzf.apb :=  # Debug # Fast | Slow # LocalTrace
 PARGS_mutexes.apb := # Debug
-PARGS_rnd.aps := Urand
-PARGS_rnd.apb := Urand
+PARGS_rnd.aps := Urand # Urand | Krand
+PARGS_rnd.apb := Urand # Urand | Krand
 PARGS_snappy.apb := # Debug
 CLIBS_app := $(UTILS_SLIBS) $(PCRE_SLIBS)
 CLIBS_afpx_bld := $(PCRE_SLIBS) $(X11_SLIBS)
