--- a/cots/mine/makefile
+++ b/cots/mine/makefile
@@ -8,5 +8,8 @@ EXES := mine_detector
 OPTIMIZED := mine_detector field field-operations user_if
 GARGS := `gtkada-config`
 
+
+TXT := Readme
+
 include $(TEMPLATES)/ada.mk
 
