Click to select source and release to select target

--- a/usr/lapeau/makefile
+++ b/usr/lapeau/makefile
@@ -4,9 +4,11 @@ include $(TEMPLATES)/units.mk
 ADAVIEW := $(REPOSIT)
 ADACTL := true
 
-EXES := lapeau
+EXES := lapeau lapeau.stat
 
 CLIBS := cards $(X11_SLIBS) Xext
+LARGS_lapeau.stat :=-lcards $(X11_ALIBS) -lXext
+
 
 include $(TEMPLATES)/ada.mk
 
