--- a/usr/tests/makefile
+++ b/usr/tests/makefile
@@ -13,7 +13,7 @@ CLIBS_t_async := $(PCRE_SLIBS)
 CLIBS_t_autobus := $(PCRE_SLIBS)
 CLIBS_t_bencode := $(PCRE_SLIBS)
 CLIBS_t_byte_to_unicode := $(PCRE_SLIBS)
-CLIBS_t_cards := cards Xext
+CLIBS_t_cards := $(CARDS_SLIBS)
 CLIBS_t_channels := $(PCRE_SLIBS)
 CLIBS_t_date_text := $(PCRE_SLIBS)
 CLIBS_t_delta_date := $(PCRE_SLIBS)
