--- a/usr/makefile
+++ b/usr/makefile
@@ -1,9 +1,9 @@
 include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
 SUBDIRS := dictio fifos pipe mapcode \
  account agite als approx astub asubst battleship c_magic chess code enigma fl \
- great_circle heart hungar lapeau lsadeps lem logrotator mcd misc mmind navig \
- nimmari pexec regex renardeau sensor simusi sokoban tasks tcpchat tcpipe \
- tests xml xwords
+ great_circle freecell heart hungar lapeau lsadeps lem logrotator mcd misc \
+ mmind navig nimmari pexec regex renardeau sensor simusi sokoban tasks tcpchat \
+ tcpipe tests xml xwords
 
 include $(TEMPLATES)/dir.mk
 
