--- a/usr/misc/makefile
+++ b/usr/misc/makefile
@@ -6,7 +6,7 @@ ADACTL := true
 AFPX := true
 AFPX_XREF := afpx_xref
 
-SUBUNITS :=
+SUBUNITS := intercept.fpl
 EXES := adand add_nums alook arbipas astat azf beep bernouilli \
  comp_vars day_of_week ddir e2f fact full_path g hanoi \
  impot_04 intercept lenv alz4l mlbx_overflow one_of_arg pascal pingpong prime \
@@ -18,6 +18,7 @@ EXES := adand add_nums alook arbipas astat azf beep bernouilli \
 
 CLIBS := $(UTILS_SLIBS)
 CLIBS_comp_vars := $(PCRE_SLIBS)
+CLIBS_intercept := $(PCRE_SLIBS)
 CLIBS_lenv := $(PCRE_SLIBS)
 CLIBS_relay := $(PCRE_SLIBS)
 CLIBS_renamer := $(X11_SLIBS)
