Add Apply route to a point

--- a/usr/great_circle/makefile
+++ b/usr/great_circle/makefile
@@ -9,6 +9,7 @@ AFPX_XREF := afpx_xref
 EXES := gc hp_gc
 
 CLIBS := $(UTILS_SLIBS)
+CLIBS_hp_gc := $(PCRE_SLIBS)
 CLIBS_gc := $(PCRE_SLIBS) $(X11_SLIBS)
 
 include $(TEMPLATES)/ada.mk
