--- a/usr/mapcode/makefile
+++ b/usr/mapcode/makefile
@@ -2,7 +2,7 @@ include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
 
 ADAVIEW := $(REPOSIT)
 ADACTL := true
-ADACTL_EXCL=ndata.ads
+ADACTL_EXCL=ndata.ads countries.ads
 
 EXES := t_mapcode t_accuracy
 PARGS_t_mapcode.apb =
