Allow (re)search in the list of anagrams

--- a/usr/xwords/makefile
+++ b/usr/xwords/makefile
@@ -8,7 +8,7 @@ AFPX_XREF := afpx_xref
 
 EXES := xwords words_check t_analist
 
-CLIBS_xwords := $(X11_SLIBS)
+CLIBS_xwords := $(PCRE_SLIBS) $(X11_SLIBS)
 CLIBS := $(UTILS_SLIBS)
 
 include $(TEMPLATES)/ada.mk
