Make a static version

--- a/usr/mmind/makefile
+++ b/usr/mmind/makefile
@@ -4,9 +4,11 @@ ADAVIEW := $(REPOSIT)
 ADACTL := true
 
 SUBUNITS := action.treat_click action.treat_release
-EXES := mmind
+EXES := mmind mmind.stat
 
 CLIBS_mmind := $(X11_SLIBS)
+
+LARGS_mmind.stat := $(PCRE_ALIBS) $(X11_ALIBS)
 
 include $(TEMPLATES)/ada.mk
 
