Add language support

--- a/usr/mapcode/makefile
+++ b/usr/mapcode/makefile
@@ -2,11 +2,11 @@ include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
 
 ADAVIEW := $(REPOSIT)
 ADACTL := true
-ADACTL_EXCL=ndata.ads countries.ads
+ADACTL_EXCL=ndata.ads countries.ads language_defs.ads
 
 EXES := t_mapcode t_accuracy
 PARGS_t_mapcode.apb =
-CLIBS_t_accuracy := $(UTILS_SLIBS)
+CLIBS := $(UTILS_SLIBS)
 
 include $(TEMPLATES)/ada.mk
 
