--- a/usr/great_circle/makefile
+++ b/usr/great_circle/makefile
@@ -7,7 +7,7 @@ SUBUNITS := intercept.fpl
 AFPX := true
 AFPX_XREF := afpx_xref
 
-EXES := gc hp_gc intercept conv
+EXES := gc hp_gc intercept geo_conv
 
 CLIBS := $(UTILS_SLIBS) $(PCRE_SLIBS)
 CLIBS_gc := $(PCRE_SLIBS) $(X11_SLIBS)
