Add Geohash-36 encoding and decoding library

--- a/usr/makefile
+++ b/usr/makefile
@@ -1,9 +1,9 @@
 include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
 SUBDIRS := dictio fifos pipe mapcode olc \
  account agite als approx astub asubst battleship c_magic chess code enigma fl \
- freecell great_circle heart hungar lapeau lsadeps lem logrotator mcd misc \
- mmind navig nimmari pexec regex renardeau sensor simusi sokoban tasks \
- tcpchat tcpipe tests xml xwords
+ freecell geohash36 great_circle heart hungar lapeau lsadeps lem logrotator \
+ mcd misc mmind navig nimmari pexec regex renardeau sensor simusi sokoban \
+ tasks tcpchat tcpipe tests xml xwords
 
 include $(TEMPLATES)/dir.mk
 
