--- a/usr/makefile
+++ b/usr/makefile
@@ -1,7 +1,7 @@
 include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
-SUBDIRS := dictio fifos pipe mapcode olc \
+SUBDIRS := dictio fifos pipe mapcode olc geohash geohash36 \
  account agite als approx astub asubst battleship c_magic chess code enigma fl \
- freecell geohash geohash36 great_circle heart hungar lapeau lsadeps lem \
+ freecell great_circle heart hungar lapeau lsadeps lem \
  logrotator mcd misc mmind navig nimmari pexec regex renardeau sensor simusi \
  sokoban tasks tcpchat tcpipe tests xml xwords
 
