--- a/usr/makefile
+++ b/usr/makefile
@@ -1,8 +1,8 @@
 include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
 SUBDIRS := dictio fifos pipe mapcode olc geohash geohash36 \
  account agite als approx astub asubst battleship c_magic chess code enigma fl \
- freecell great_circle heart hungar lapeau lsadeps lem \
- logrotator mcd misc mmind navig nimmari pexec regex renardeau sensor simusi \
+ freecell great_circle heart hungar lapeau lem logrotator \
+ lsadeps mcd misc mmind navig nimmari pexec regex renardeau sensor simusi \
  sokoban tasks tcpchat tcpipe tests xml xwords
 
 include $(TEMPLATES)/dir.mk
