remove duplicate geo_codes

--- a/usr/makefile
+++ b/usr/makefile
@@ -1,6 +1,6 @@
 include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
 SUBDIRS := dictio fifos pipe geo_codes \
- account agite als approx astub asubst c_magic code enigma fl games geo_codes \
+ account agite als approx astub asubst c_magic code enigma fl games \
  great_circle heart hungar logrotator lsadeps mcd misc navig pexec regex \
  sensor simusi tasks tcpchat tcpipe tests xml xwords
 
