--- a/usr/games/makefile
+++ b/usr/games/makefile
@@ -1,6 +1,6 @@
 include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
-SUBDIRS := battleship chess fourtwentyone freecell lapeau lem mmind nimmari \
-  renardeau sokoban
+SUBDIRS := battleship chess fourtwentyone freecell klondike lapeau lem mmind \
+  nimmari renardeau sokoban
 
 
 include $(TEMPLATES)/dir.mk
