Handle files listing files

--- a/usr/misc/makefile
+++ b/usr/misc/makefile
@@ -10,7 +10,7 @@ EXES := adand add_nums alook arbipas astat azf beep bernouilli \
  comp_vars copy_files day_of_week ddir e2f fact full_path g hanoi \
  impot_04 lenv alz4l mlbx_overflow one_of_arg pascal pingpong prime \
  random relay renamer \
- second statfile stats status strcase tcping trail_spaces udp_spy \
+ second stats status strcase tcping trail_spaces udp_spy \
  wait wake \
  astat.stat pingpong.stat \
  tcping.stat tcp_spy udp_spy.stat
